fixed spacing for the navbar

--- a/src/Organisms/Nav/Nav.css
+++ b/src/Organisms/Nav/Nav.css
@@ -2,19 +2,13 @@ nav {
   display: flex;
   text-align: left;
   background-color: #becee5;
+  padding: 1rem;
 }
 
 .flex-1 {
   flex: 1;
-}
-
-.flex-3 {
-  flex: 3;
+  text-align: center;
 }
 
 @media all and (min-width: 800px) {
-  .flex-3 {
-    flex: 3;
-    padding: 0 0 0 2rem;
-  }
 }
