--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -15,6 +15,14 @@ body {
   line-height: 1.5;
 }
 
+button {
+  background-color: transparent;
+  border: 1px solid #000;
+  padding: 1rem;
+  font-size: 1.25rem;
+  margin: 2rem;
+}
+
 .flex-1 {
   flex: 1;
 }
